// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisputeStatusChip renders charge_refunded status 1`] = `
<div>
  <span
    class="chip chip-light is-compact"
  >
    Charge refunded
  </span>
</div>
`;

exports[`DisputeStatusChip renders default appearance if status is unrecognized 1`] = `
<div>
  <span
    class="chip chip-light is-compact"
  >
    Mock status
  </span>
</div>
`;

exports[`DisputeStatusChip renders lost status 1`] = `
<div>
  <span
    class="chip chip-light is-compact"
  >
    Lost
  </span>
</div>
`;

exports[`DisputeStatusChip renders needs_response status 1`] = `
<div>
  <span
    class="chip chip-primary is-compact"
  >
    Needs response
  </span>
</div>
`;

exports[`DisputeStatusChip renders under_review status 1`] = `
<div>
  <span
    class="chip chip-light is-compact"
  >
    Under review
  </span>
</div>
`;

exports[`DisputeStatusChip renders warning_closed status 1`] = `
<div>
  <span
    class="chip chip-light is-compact"
  >
    Inquiry: Closed
  </span>
</div>
`;

exports[`DisputeStatusChip renders warning_needs_response status 1`] = `
<div>
  <span
    class="chip chip-primary is-compact"
  >
    Inquiry: Needs response
  </span>
</div>
`;

exports[`DisputeStatusChip renders warning_under_review status 1`] = `
<div>
  <span
    class="chip chip-light is-compact"
  >
    Inquiry: Under review
  </span>
</div>
`;

exports[`DisputeStatusChip renders won status 1`] = `
<div>
  <span
    class="chip chip-light is-compact"
  >
    Won
  </span>
</div>
`;
